.nx/cache/terminalOutputs/4110644492989841065
[2m> [22msh -c 'set -a; [ -f .env ] && . ./.env; [ -f .env.local ] && . ./.env.local; set +a; cd apps/admin && next dev'

 [33m[1m⚠[22m[39m Port 3000 is in use by process 93015, using available port 3001 instead.
   [1m[38;2;173;127;168m▲ Next.js 15.5.18[39m[22m
   - Local:        http://localhost:3001
   - Network:      http://192.168.1.3:3001

 [32m[1m✓[22m[39m Starting...
 [32m[1m✓[22m[39m Ready in 1565ms
 [37m[1m○[22m[39m Compiling / ...
 [32m[1m✓[22m[39m Compiled / in 2.1s (968 modules)
 GET / [32m200[39m in 2562ms
 [33m[1m⚠[22m[39m Cross origin request detected from 192.168.1.3 to /_next/* resource. In a future major version of Next.js, you will need to explicitly configure "allowedDevOrigins" in next.config to allow this.
Read more: https://nextjs.org/docs/app/api-reference/config/next-config-js/allowedDevOrigins
 [37m[1m○[22m[39m Compiling /login ...
 [32m[1m✓[22m[39m Compiled /login in 974ms (1014 modules)
 [33m[1m⚠[22m[39m Fast Refresh had to perform a full reload. Read more: https://nextjs.org/docs/messages/fast-refresh-reload
 GET /login [32m200[39m in 1250ms
 GET / [32m200[39m in 35ms
 GET /login [32m200[39m in 63ms
 [32m[1m✓[22m[39m Compiled /api/auth/[...nextauth] in 308ms (1019 modules)
 GET /api/auth/providers [32m200[39m in 864ms
 GET /api/auth/csrf [32m200[39m in 8ms
 POST /api/auth/callback/credentials? [32m200[39m in 2942ms
 [32m[1m✓[22m[39m Compiled /middleware in 112ms (115 modules)
 [37m[1m○[22m[39m Compiling /dashboard ...
 [32m[1m✓[22m[39m Compiled /dashboard in 683ms (1261 modules)
 GET /dashboard [32m200[39m in 4471ms
 GET /dashboard [32m200[39m in 3622ms
 [32m[1m✓[22m[39m Compiled /products in 475ms (1282 modules)
 GET /products [32m200[39m in 1281ms
 GET /products [32m200[39m in 1399ms
 [32m[1m✓[22m[39m Compiled /_not-found in 354ms (1285 modules)
 GET /apple-touch-icon-precomposed.png [33m404[39m in 503ms
 GET /apple-touch-icon.png [33m404[39m in 25ms
 [32m[1m✓[22m[39m Compiled /products/new in 337ms (1287 modules)
 GET /products/new [32m200[39m in 987ms
 GET /products [32m200[39m in 643ms
 [37m[1m○[22m[39m Compiling /products/[id]/edit ...
 [32m[1m✓[22m[39m Compiled /products/[id]/edit in 513ms (1282 modules)
 GET /products/grace_211/edit [32m200[39m in 1906ms
 GET /products [32m200[39m in 779ms
 POST /products/grace_211/edit [34m303[39m in 2335ms
 [37m[1m○[22m[39m Compiling /categories ...
 [32m[1m✓[22m[39m Compiled /categories in 515ms (1288 modules)
 GET /categories [32m200[39m in 2381ms
 [32m[1m✓[22m[39m Compiled in 1187ms (1271 modules)
 GET /categories [32m200[39m in 2261ms
<w> [1m[33m[webpack.cache.PackFileCacheStrategy] Caching failed for pack: Error: ENOENT: no such file or directory, rename '/Users/kosalpen/Documents/admin-eco-bright/apps/admin/.next/cache/webpack/server-development/7.pack.gz_' -> '/Users/kosalpen/Documents/admin-eco-bright/apps/admin/.next/cache/webpack/server-development/7.pack.gz'[39m[22m
 [37m[1m○[22m[39m Compiling / ...
 [32m[1m✓[22m[39m Compiled / in 637ms (908 modules)
 GET / [32m200[39m in 788ms
 [31m[1m⨯[22m[39m [Error [InvariantError]: Invariant: Expected clientReferenceManifest to be defined. This is a bug in Next.js.]
 [31m[1m⨯[22m[39m [Error [InvariantError]: Invariant: Expected clientReferenceManifest to be defined. This is a bug in Next.js.] {
  page: [32m'/'[39m
}
 [37m[1m○[22m[39m Compiling /_error ...
 [32m[1m✓[22m[39m Compiled /_error in 1935ms (1608 modules)
 [31m[1m⨯[22m[39m SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
<w> [1m[33m[webpack.cache.PackFileCacheStrategy] Caching failed for pack: Error: ENOENT: no such file or directory, rename '/Users/kosalpen/Documents/admin-eco-bright/apps/admin/.next/cache/webpack/client-development/12.pack.gz_' -> '/Users/kosalpen/Documents/admin-eco-bright/apps/admin/.next/cache/webpack/client-development/12.pack.gz'[39m[22m
 [32m[1m✓[22m[39m Compiled in 1470ms (1522 modules)
 [37m[1m○[22m[39m Compiling /login ...
 [32m[1m✓[22m[39m Compiled /login in 760ms (1029 modules)
 GET /login [32m200[39m in 1238ms
 GET /dashboard [32m200[39m in 3916ms
 [32m[1m✓[22m[39m Compiled in 1092ms (1548 modules)
 [37m[1m○[22m[39m Compiling / ...
 [32m[1m✓[22m[39m Compiled / in 691ms (1033 modules)
 GET / [32m200[39m in 971ms
 GET /dashboard [32m200[39m in 2093ms
 GET /products [32m200[39m in 700ms
 GET /categories [32m200[39m in 1801ms
 [37m[1m○[22m[39m Compiling /stock ...
 [32m[1m✓[22m[39m Compiled /stock in 734ms (1544 modules)
 [33m[1m⚠[22m[39m Fast Refresh had to perform a full reload. Read more: https://nextjs.org/docs/messages/fast-refresh-reload
 GET /stock [32m200[39m in 873ms
 GET /categories [32m200[39m in 2097ms
 GET /products [32m200[39m in 684ms
<w> [1m[33m[webpack.cache.PackFileCacheStrategy] Caching failed for pack: Error: incorrect header check[39m[22m
^C^C[?25h
^C